--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="StarGaze by Stevens Antony" content="width=device-width, initial-scale=1.0">
     <title>StarGaze</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
