--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="StarGaze Broken Link" content="width=device-width, initial-scale=1.0">
     <title>404 - Page Not Found</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
