--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="Gallery StarGaze" content="width=device-width, initial-scale=1.0">
     <title>Gallery - StarGaze</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
