--- a/gallery.html
+++ b/gallery.html
@@ -17,6 +17,11 @@
         </nav>
     </header>
     <main>
+        <section class="about-section">
+            <h2>Celestial Gallery</h2>
+            <p>Discover breathtaking images of galaxies, nebulae, and planets captured from the depths of space.</p>
+        </section>
+        
         <h2>Explore the Universe in Pictures</h2>
         <div class="gallery">
             <div class="gallery-item">
