--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,11 @@
         </nav>
     </header>
     <main>
-        <h2>Get in Touch</h2>
+        <section class="about-section">
+                <h2>Get in Touch</h2>
+                <p>Have questions or want to share your thoughts on the cosmos? Reach out to us, and we'll get back to you as soon as possible.</p>
+        </section>
+        
         <form id="contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
