--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-
+<main>
     <section class="hero">
         <h2>Explore the Universe</h2>
-        <p>Discover breathtaking images and fascinating facts about space.</p>
+        <p>Discover the wonders of the universe!</p>
         <button id="fact-btn">Get a Space Fact</button>
         <p id="fact"></p>
     </section>
+
+    <section class="about-section">
+        <h2>About StarGaze</h2>
+        <p>StarGaze is your gateway to the wonders of the universe. Explore stunning celestial imagery, learn fascinating space facts, and connect with the cosmos like never before. Whether you're an aspiring astronomer or just love the beauty of the night sky, StarGaze has something for you.</p>
+        <p class="quote">"Somewhere, something incredible is waiting to be known." – Carl Sagan</p>
+    </section>
+</main>
 
     <footer>
         <p>&copy; 2025 StarGaze. All Rights Reserved.</p>
