--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <div class="starry-bg"></div>
     <header>
         <h1>Contact StarGaze</h1>
         <nav>
@@ -22,7 +23,7 @@
                 <h2>Get in Touch</h2>
                 <p>Have questions or want to share your thoughts on the cosmos? Reach out to us, and we'll get back to you as soon as possible.</p>
         </section>
-        
+
         <form id="contact-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
