--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="starry-bg"></div>
     <header>
         <h1>StarGaze Gallery</h1>
         <nav>
@@ -21,7 +22,7 @@
             <h2>Celestial Gallery</h2>
             <p>Discover breathtaking images of galaxies, nebulae, and planets captured from the depths of space.</p>
         </section>
-        
+
         <h2>Explore the Universe in Pictures</h2>
         <div class="gallery">
             <div class="gallery-item">
