--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <div class="starry-bg"></div>
     <header>
         <h1>StarGaze</h1>
         <nav>
@@ -23,6 +24,9 @@
         <p>Discover the wonders of the universe!</p>
         <button id="fact-btn">Get a Space Fact</button>
         <p id="fact"></p>
+        <div class="scroll-down">
+            ↓
+        </div>        
     </section>
 
     <section class="about-section">
@@ -30,6 +34,19 @@
         <p>StarGaze is your gateway to the wonders of the universe. Explore stunning celestial imagery, learn fascinating space facts, and connect with the cosmos like never before. Whether you're an aspiring astronomer or just love the beauty of the night sky, StarGaze has something for you.</p>
         <p class="quote">"Somewhere, something incredible is waiting to be known." – Carl Sagan</p>
     </section>
+
+    <section class="flip-card">
+        <div class="flip-card-inner">
+            <div class="flip-card-front">
+                <h2>Astronaut Profile</h2>
+                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRtgt3mcjEmLocwUXPMtEp_osklRlw5O5RSOlM-9ZhpzMzzaHVv9oxNkQSsRb3Df958J_ROVdWyOSp4uPjv0cqs7Q" alt="Astronaut">
+            </div>
+            <div class="flip-card-back">
+                <p>Carl Sagan - American astronomer and planetary scientist</p>
+            </div>
+        </div>
+    </section>
+    
 </main>
 
     <footer>
