--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="starry-bg"></div>
     <header>
         <h1>Oops! Page Not Found</h1>
         <nav>
