--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
             </div>
         </div>
     </section>
-    
+
+    <section class="solar-system">
+        <div class="sun"></div>
+        <div class="planet"></div>
+    </section>    
 </main>
 
     <footer>
